@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-25T16:08:14Z",
-  "count_outdated" : 651,
-  "uniques_outdated" : 308,
+  "timestamp" : "2024-01-26T00:30:22Z",
+  "count_outdated" : 653,
+  "uniques_outdated" : 309,
   "count" : 674,
   "uniques" : 323,
   "clones" : [
-    {
-      "timestamp": "2024-01-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-12T00:00:00Z",
       "count": 2,
