@@ -1,3 +1,12 @@
+2024-01-26T00:30:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7662251401 # 57
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
+* notice: last 14d: unq all: 5 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 308 651 / 323 674
+* notice: next accum: outdated-unq outdated-all / unq all: 309 653 / 323 674
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-01-11] / []
+
 2024-01-25T16:08:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7657252043 # 56
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
